Fixed y-level of the 2 containers
- made buttons "invisible" instead of "display: none"
- altered padding of buttons to better align the containers

--- a/style.css
+++ b/style.css
@@ -55,8 +55,9 @@ h1 {
 
 #cropButton,
 #downloadButton {
-  display: none;
-  padding-top: 10px;
+  display: inline-block;
+  visibility: hidden;
+  padding-top: 8px;
 }
 
 #cropButton {
